--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
                <img src="bg_main.jpg" />
             </header>
    </body>
-   <script type="text/javascript">
-	atOptions = {
-		'key' : 'e68ef28c4c8da17cc8b11bf23e1d8c4d',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/e68ef28c4c8da17cc8b11bf23e1d8c4d/invoke.js"></script>
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6599769910042788"
+     crossorigin="anonymous"></script>
 </html>
 
