--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <meta name="author" content="">
       <!-- style css -->
       <link rel="stylesheet" href="style.css">
+      <meta name="google-adsense-account" content="ca-pub-6599769910042788">
    
       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
