--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
    </body>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6599769910042788"
      crossorigin="anonymous"></script>
+   <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'slnmwwm7j5',
+    });
+</script>
+
 </html>
 
